Fix reset button alignment with latest fonts

--- a/themes/modern.css
+++ b/themes/modern.css
@@ -163,7 +163,7 @@ dialog.window::backdrop {
   border-right: 2px solid darkgrey;
   border-bottom: 2px solid darkgrey;
   box-shadow: 0 0 0 1px darkgrey;
-  line-height: 1.3;
+  line-height: 1;
   text-align: center;
 }
 .minesweeper .reset:active {
